updated pricing and tebex store

--- a/store.html
+++ b/store.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£19.40</b> Per Month</span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.40</b> Per Month</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br>
                 <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
@@ -119,7 +119,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
-                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.95</b> Per Month</span></p></center><br>
+                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£24.95</b> Per Month</span></p></center><br>
                  <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br>
                  <a href="https://vdevs.tebex.io/package/4882078" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                </div>
@@ -134,19 +134,20 @@
         </div>
         <div class="webhostingPackages">
         
-           <!-- TODO Bronze Package -->
+           <!-- TODO Amateur Package -->
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              Bronze Package
+              Amateur Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.98</b> Per Month</span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£4.99</b> Per Month</span></p></center><br>
                 <center><ul class="list-group">
-                          <li class="list-group-item"><b style="color: #7289DA;">3</b>&nbsp;FTP Accounts</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">5</b>&nbsp;Personal Emails</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">20GB</b>&nbsp;Web Storage</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">1TB</b>&nbsp;Bandwidth</li>
+                          <li class="list-group-item"><b style="color: #7289DA;">2GB</b>&nbsp;Disk Space</li>
+                          <li class="list-group-item"><b style="color: #7289DA;">10GB</b>&nbsp;Bandwidth</li>
+                          <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;FTP Accounts</li>
+                          <li class="list-group-item"><b style="color: #7289DA;">5</b>&nbsp;SQL Databases</li>
+                          <li class="list-group-item"><b style="color: #7289DA;">3</b>&nbsp;Personal Emails</li>
                         </ul>
                 </center>
                 <br>
@@ -158,21 +159,22 @@
               </div>
             </div>
       
-            <!-- TODO  Silver Package -->
+            <!-- TODO  Professional Package -->
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-               Silver Package
+              Professional Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.76</b> Per Month</span></p></center><br>
+                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                            <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;FTP Accounts</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">12</b>&nbsp;Personal Emails</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">125GB</b>&nbsp;Web Storage</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">5TB</b>&nbsp;Bandwidth</li>
-                          </ul>
-                  </center>
+                    <li class="list-group-item"><b style="color: #7289DA;">10GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">100GB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">10</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">10</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;Personal Emails</li>
+                  </ul>
+          </center>
                   <br>
                   <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
@@ -181,21 +183,22 @@
                   </span>
                 </div>
             </div>
-            <!-- TODO Platinum Package -->
+            <!-- TODO Business Package -->
             <div class="card2 text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
-                Platinum Package
+                Business Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.62</b> Per Month</span></p></center><br>
+                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£9.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                            <li class="list-group-item"><b style="color: #7289DA;">25</b>&nbsp;FTP Accounts</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">18</b>&nbsp;Personal Emails</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">250GB</b>&nbsp;Web Storage</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">15TB</b>&nbsp;Bandwidth</li>
-                          </ul>
-                  </center>
+                    <li class="list-group-item"><b style="color: #7289DA;">100GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">1TB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">25</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">15</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">15</b>&nbsp;Personal Emails</li>
+                  </ul>
+          </center>
                   <br>
                   <a href="https://vdevs.tebex.io/package/4842919" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
@@ -213,12 +216,13 @@
                   <!-- <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£x.xx</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                            <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;FTP Accounts</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Personal Emails</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Web Storage</li>
-                            <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Bandwidth</li>
-                          </ul>
-                  </center>
+                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Personal Emails</li>
+                  </ul>
+          </center>
                   <br>
                   <a href="https://vdevs.tebex.io/package/4842921" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
