more store page updates

--- a/store.html
+++ b/store.html
@@ -132,6 +132,8 @@
         <div class="header">
           <h4>Web-Hosting Packages</h4>
         </div>
+        <p style="color: #fafafa;">Amazingly Reliable Web Hosting</p>
+        <p style="color: #fafafa;">Pay as you go. No long term contracts. Cancel anytime.</p><br>
         <div class="webhostingPackages">
         
            <!-- TODO Amateur Package -->
@@ -143,11 +145,11 @@
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£4.99</b> Per Month</span></p></center><br>
                 <center><ul class="list-group">
-                          <li class="list-group-item"><b style="color: #7289DA;">2GB</b>&nbsp;Disk Space</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">10GB</b>&nbsp;Bandwidth</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;FTP Accounts</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">5</b>&nbsp;SQL Databases</li>
-                          <li class="list-group-item"><b style="color: #7289DA;">3</b>&nbsp;Personal Emails</li>
+                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;2GB</b>&nbsp;Disk Space</li>
+                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Bandwidth</li>
+                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;FTP Accounts</li>
+                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;5</b>&nbsp;SQL Databases</li>
+                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;3</b>&nbsp;Personal Emails</li>
                         </ul>
                 </center>
                 <br>
@@ -168,11 +170,11 @@
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><b style="color: #7289DA;">10GB</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">100GB</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">10</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">10</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
@@ -192,11 +194,11 @@
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£9.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><b style="color: #7289DA;">100GB</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">1TB</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">25</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">15</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">15</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;1TB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;25</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
@@ -216,11 +218,11 @@
                   <!-- <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£x.xx</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
