added cdn for new icons, converting over time

--- a/store.html
+++ b/store.html
@@ -21,6 +21,7 @@
       <meta data-n-head="ssr" data-hid="theme-color" name="theme-color" name="theme-color"content="#0A0F16;"/>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
       <title>Voltic Development | Projects</title> 
       <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
       <link rel="icon" href="../assets/img/vlogo.png"> 
@@ -82,7 +83,7 @@
            <!-- TODO Basic Package -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              Basic Package
+              <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Basic Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
@@ -99,7 +100,7 @@
             <!-- TODO  Standard Package -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-               Standard Package
+              <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Standard Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
@@ -115,7 +116,7 @@
             <!-- TODO Premium Package -->
             <div class="card text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
-                Premium Package
+                <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Premium Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
@@ -139,17 +140,17 @@
            <!-- TODO Amateur Package -->
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              Amateur Package
+              <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Amateur Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£4.99</b> Per Month</span></p></center><br>
                 <center><ul class="list-group">
-                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;2GB</b>&nbsp;Disk Space</li>
-                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Bandwidth</li>
-                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;FTP Accounts</li>
-                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;5</b>&nbsp;SQL Databases</li>
-                          <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;3</b>&nbsp;Personal Emails</li>
+                          <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;2GB</b>&nbsp;Disk Space</li>
+                          <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Bandwidth</li>
+                          <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;FTP Accounts</li>
+                          <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;5</b>&nbsp;SQL Databases</li>
+                          <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;3</b>&nbsp;Personal Emails</li>
                         </ul>
                 </center>
                 <br>
@@ -164,17 +165,17 @@
             <!-- TODO  Professional Package -->
           <div class="card2 text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              Professional Package
+              <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Professional Package
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;10</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;7</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
@@ -188,17 +189,17 @@
             <!-- TODO Business Package -->
             <div class="card2 text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
-                Business Package
+                <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Business Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£9.99</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;1TB</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;25</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;100GB</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;1TB</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;25</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;15</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
@@ -212,17 +213,17 @@
             <!-- TODO Custom Package -->
             <div class="card2 text-white bg-dark" ">
               <div class="card-header" style="background-color: #1a2535;">
-                Custom Package
+                <i class="bi bi-patch-check" style="color: #7289DA;"></i>&nbsp;Custom Package
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br> -->
                   <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£x.xx</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Disk Space</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Bandwidth</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;FTP Accounts</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;SQL Databases</li>
-                    <li class="list-group-item"><i class="fas fa-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Personal Emails</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Disk Space</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Bandwidth</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;FTP Accounts</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;SQL Databases</li>
+                    <li class="list-group-item"><i class="bi bi-shield-check" style="color: green;"></i><b style="color: #7289DA;">&nbsp;#</b>&nbsp;Personal Emails</li>
                   </ul>
           </center>
                   <br>
