--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
       <meta data-n-head="ssr" data-hid="theme-color" name="theme-color" name="theme-color"content="#0A0F16;"/>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
       <title>Voltic Development | Projects</title> 
       <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
       <link rel="icon" href="../assets/img/vlogo.png"> 
