more store page updates

--- a/store.html
+++ b/store.html
@@ -109,7 +109,7 @@
                 <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                NEW
+                Recommended
                 <span class="visually-hidden">New Package</span>
               </span>
             </div>
@@ -181,7 +181,7 @@
                   <br>
                   <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                    NEW
+                    Recommended
                     <span class="visually-hidden">New Package</span>
                   </span>
                 </div>
